# IGNITE-843 Fixed dropdown overflow.

--- a/modules/control-center-web/src/main/js/public/stylesheets/style.scss
+++ b/modules/control-center-web/src/main/js/public/stylesheets/style.scss
@@ -145,11 +145,31 @@ ul.navbar-nav, .sidebar-nav {
     color: $input-color-placeholder;
 }
 
-.theme-line .dropdown-menu {
+.theme-line ul.dropdown-menu {
     min-width: 75px;
+    max-width: 500px;
     max-height: 20em;
     overflow: auto;
     overflow-x: hidden;
+
+     li > a {
+         display: block;
+
+         cursor: default;
+         padding: 3px 0 3px 5px;
+
+         overflow: hidden;
+         white-space: nowrap;
+         text-overflow: ellipsis;
+
+         i {
+             float: right;
+             color: $brand-primary;
+             background-color: transparent;
+             line-height: $line-height-base;
+             margin-right: 5px;
+         }
+     }
 }
 
 .theme-line .border-left .sidebar-nav {
@@ -415,6 +435,7 @@ h3 {
 button.form-control {
     display: block;
     overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
 }
 
@@ -1467,6 +1488,30 @@ a {
 
 button.dropdown-toggle {
     margin-right: 5px;
+}
+
+button.select-toggle {
+    padding-right: 12px;
+}
+
+button.select-toggle::after {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: 0.25rem;
+    vertical-align: middle;
+    content: "";
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-left: 0.3em solid transparent;
+    position: absolute;
+    right: 22px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+button.select-toggle.btn::after {
+    right: 20px;
 }
 
 // Prevent scroll bars from being hidden for OS X.
